--- a/src/app/components/tournament-list/tournament-list.component.html
+++ b/src/app/components/tournament-list/tournament-list.component.html
@@ -10,6 +10,7 @@
       <div class="border rounded p-4 flex justify-between items-center">
         <div>
           <h2 class="text-xl font-semibold">{{ tournament.name }}</h2>
+          <p>Id: {{ tournament.id }}</p>
           <p class="text-gray-600">{{ tournament.date }}</p>
           <p>Teams: {{ tournament.teams.length }}</p>
         </div>
