--- a/src/app/components/tournament-list/tournament-list.component.html
+++ b/src/app/components/tournament-list/tournament-list.component.html
@@ -22,8 +22,8 @@
             View
           </button>
           <button
-            (click)="deleteTournament(tournament.id)"
-            class="bg-red-500 text-white px-3 py-1 rounded"
+            (click)="deleteTournament(tournament)"
+            class="gh-button-secondary text-red-500"
           >
             Delete
           </button>
