edit landing page and fix styling bugs in header and footer

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,10 @@
 <app-header></app-header>
 
-<div class="min-h-screen flex flex-col bg-[color:var(--color-canvas-default)]">
+<div
+  class="min-h-screen flex flex-col bg-[color:var(--color-canvas-default)] pt-[72px]"
+>
   <main class="flex-grow">
-    <div class="max-w-[1280px] mx-auto px-4 sm:px-6 lg:px-8 py-6">
+    <div class="mx-auto py-6">
       <router-outlet></router-outlet>
     </div>
   </main>
