--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -17,7 +17,7 @@
       </div>
       <div class="flex items-center justify-center gap-4">
         <div
-          class="text-sm text-[color:var(--color-text-secondary)] hover:text-white transition-colors items-center justify-center flex"
+          class="text-sm text-[color:var(--color-text-secondary)] hover:text-black transition-colors items-center justify-center flex"
         >
           <a [routerLink]="['/privacy']">Privacy Policy</a>
         </div>
@@ -56,9 +56,9 @@
           />
         </a>
         <a
-          href="https://github.com"
+          href="https://github.com/bplpd/beer-pong-admin"
           target="_blank"
-          class="text-[color:var(--color-text-secondary)] hover:text-white transition-colors"
+          class="text-[color:var(--color-text-secondary)] hover:text-black transition-colors"
         >
           <svg
             xmlns="http://www.w3.org/2000/svg"
