--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,5 @@
 <header
-  class="bg-[color:var(--color-header-bg)] border-b border-[color:var(--color-border-primary)]"
+  class="bg-[color:var(--color-header-bg)] border-b border-[color:var(--color-border-primary)] fixed top-0 left-0 right-0 z-50"
 >
   <div
     class="max-w-[1280px] mx-auto px-4 sm:px-6 lg:px-8 py-4 flex justify-between items-center"
