added random player names generator

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -8,7 +8,7 @@
       <img
         src="/assets/img/beer-pong-icon.svg"
         alt="Beer Pong"
-        class="w-8 h-8"
+        class="w-10 h-10 bg-neutral-300 rounded"
       />
       <h1
         class="text-xl font-semibold text-[color:var(--color-header-text)] mb-0 hover:bg-"
